<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- App Strings -->
	<string name="app_name">McBong Utility</string>
	<string name="version">Test Build 299 (06/01)</string>

	<!-- Tab Strings -->


	<!-- Menu Strings -->
	<string name="menu_quit">Exit App</string>
	<string name="menu_device_info">Device Info</string>
	<string name="menu_version">Application Info</string>

	<!-- General Strings -->
	<string name="padder">============================</string>
	<string name="installed_version">Current Installed Version ..</string>
	<string name="mainpage_header">Pick Your Poison .. </string>
	<string name="mainpage_link_backup_restore">Backup / Restore Section ..</string>
	<string name="mainpage_link_addons">Addon\'s Section ..</string>
	<string name="mainpage_link_tweaks">Tweak\'s Section ..</string>
	<string name="mainpage_link_recovery">Recovery Section ..</string>
	<string name="mainpage_link_Online">Online/Update Section ..</string>
	<string name="mainpage_text_backup_restore">Backup and Restore Various Database\'s\n including ..\n \n *Contact\'s \n *Call Logs \n *Text Message\'s \n *Browser Bookmarks </string>
	<string name="mainpage_text_addons">Download and Install Various Android Addon\'s\n including ..\n \n *3rd Party Launchers eg. Nova, Apex etc \n *Great Theme\'s </string>
	<string name="mainpage_text_tweaks">Android Tweak\'s\n includes ..\n \n *This is currently a WIP, Functions will be added very soon :) </string>
	<string name="mainpage_text_recovery">Recovery Section\n includes ..\n \n *Reboot Device \n *Reboot Into Recovery \n *Shutdown Device \n *Turn On/Off Wireless-ADB </string>
	<string name="mainpage_text_online">Online/Update Section\n includes ..\n \n *Direct access to Team Website, using built in webview component \n *Full Update Checker and Update Downloader \n </string>

	<!-- Backup/Restore Strings -->
	<string name="backup">Backup Database\'s .. </string>
	<string name="backup_all">Backup All Database\'s </string>
	<string name="restore_all">Restore All Database\'s </string>
	<string name="restore">Restore Database\'s .. </string>
	<string name="no_backup_found">Sorry, There are Missing or Corrupt Backup database\'s. Cannot Restore database\'s.</string>
	<string name="restore_complete">Restore Completed Successfully !</string>
	<string name="restore_failed">Sorry, Restore Failed</string>
	<string name="verify_database_contacts">Contact\'s Database Backup Verified !\n \n.  Verifying Database-Journal Backup .. </string>
	<string name="verify_database_contacts_journal">Contact\'s Database-Journal Backup Verified !\n .. </string>
	<string name="verify_database_messages">Message\'s Database Backup Verified !\n \n.  Verifying Database-Journal Backup .. </string>
	<string name="verify_database_messages_journal">Message\'s Database-Journal Backup Verified !\n .. </string>
	<string name="verify_database_browser">Browser Database Backup Verified !\n \n.  Verifying Database-Journal Backup .. </string>
	<string name="verify_database_browser_journal">Browser Database-Journal Backup Verified !\n .. </string>
	<string name="backup_contacts_complete">Contact\'s Backup Completed Successfully !</string>
	<string name="backup_messages_complete">Message\'s Backup Completed Successfully !</string>
	<string name="backup_browser_complete">Browser Backup Completed Successfully !</string>
	<string name="backup_all_complete">All Database\'s Backup Completed Successfully !</string>
	<string name="restore_all_complete">All Database\'s Restore Completed Successfully !</string>
	<string name="backup_contacts_failed">Sorry, Contact\'s Backup Failed</string>
	<string name="backup_messages_failed">Sorry, Message\'s Backup Failed</string>
	<string name="backup_browser_failed">Sorry, Browser Backup Failed</string>
	<string name="restore_contacts_failed">Sorry, Contact\'s Restore Failed</string>
	<string name="restore_messages_failed">Sorry, Message\'s Restore Failed</string>
	<string name="restore_browser_failed">Sorry, Browser Restore Failed</string>
	<string name="backup_contacts_and_calls">Backup Contact\'s and Calls</string>
	<string name="backup_text_messages">Backup Text Message\'s</string>
	<string name="backup_browser_bookmarks">Backup Browser Bookmark\'s</string>
	<string name="restore_contacts_and_calls">Restore Contact\'s and Call\'s</string>
	<string name="restore_text_messages">Restore Text Message\'s</string>
	<string name="restore_browser_bookmarks">Restore Browser Bookmark\'s</string>
	<string name="restoring_all">Restoring All Database\'s, please wait .. </string>
	<string name="restoring_contacts_and_calls">Restoring Contact\'s and Call-Log\'s, please wait ..</string>
	<string name="restoring_text_messages">Restoring Text Message\'s, please wait ..</string>
	<string name="restoring__browser_bookmarks">Restoring Browser Bookmark\'s, please wait ..</string>
	<string name="backing_up_all">Backing up All Database\'s, please wait .. </string>
	<string name="backing_up_contacts_and_calls">Backing up Contact\'s and Call-Log\'s, please wait ..</string>
	<string name="backing_up_text_messages">Backing up Text Message\'s, please wait ..</string>
	<string name="backing_up_browser_bookmarks">Backing up Browser Bookmark\'s, please wait ..</string>

	<!-- Download/Install Addon's Strings -->
	<string name="launchers">Download and Install 3rd Party Launcher\'s ..</string>
	<string name="themes">Download and Install 3rd Party Theme\'s ..</string>
	<string name="installing_launcher">Installing Launcher ..</string>
	<string name="installing_theme">Installing Theme ..</string>
	<string name="install_adw">Download ADW Launcher</string>
	<string name="install_golauncher">Download Go-Launcher EX</string>
	<string name="install_nova">Download Nova Launcher</string>
	<string name="install_ssdred">Download SSD-Red Theme</string>
	<string name="install_popstyle">Download PopStyle Theme</string>
	<string name="install_redics">Download Red-ICS Theme</string>

	<!-- Recovery Strings -->
	<string name="power_functions">Device Power Option\'s ..</string>
	<string name="adb_functions">Device [ADB] Debugging Option\'s ..</string>
	<string name="tweaks">Android Tweak\'s Section ..</string>
	<string name="reboot">Reboot.. Device</string>
	<string name="reboot_recovery">Reboot.. Recovery</string>
	<string name="power_off">Power Off Device</string>
	<string name="wireless_adb_enabled_ip">\n Connect to IP:port ; 192.168.0.2:5555 \n</string>
	<string name="wireless_adb_disabled_ip">\n Wireless ADB is Curently Disabled \n</string>
	<string name="wireless_adb_enable">Enable Wireless ADB </string>
	<string name="wireless_adb_disable">Disable Wireless ADB </string>
	<string name="wireless_adb_enabled">Wireless ADB - Is Enabled</string>
	<string name="wireless_adb_disabled">Wireless ADB - Is Disabled</string>
	<string name="dialog_title_reboot_recovery"> Perform Reboot into Recovery ?</string>
	<string name="dialog_title_reboot_device"> Perform Device Reboot ?</string>
	<string name="dialog_title_power_off_device"> Perform Device Shutdown ?</string>
	<!-- <string name="connect_to">Connect To..</string> -->
	<!-- <string name="connect_to_port"> :5555</string> -->


	<!-- Update Checker/Installer Strings -->
	<string name="update_checker_header">Online Update Checker</string>
	<string name="update">Update </string>
	<string name="update_available">  NEW Update Available! ..</string>
	<string name="installing_update">Installing McBong-Utility Update ..</string>
	<string name="downloading">Downloading Update ..</string>
	<string name="downloading_launcher">Downloading Launcher ..</string>
	<string name="downloading_theme">Downloading Theme ..</string>
	<string name="app_version_check">Check Latest Online Version &gt;</string>
	<string name="version_uptodate">You are using the most current version !</string>
	<string name="versions_match">No Update Available</string>
	<string name="version_notuptodate">There is an update available !</string>

	<!-- Device/OS Info Strings -->
	<string name="device_title">=======\n  Device:\n=======</string>
	<string name="os_title">=======\n Android:\n=======</string>
	<string name="info_model">Model Name..</string>
	<string name="info_device">Device Name..</string>
	<string name="info_product">Product Name..</string>
	<string name="info_board">Board Name..</string>
	<string name="info_version">Version Number..</string>
	<string name="info_build">Build Name..</string>
	<string name="info_build_id">Build ID..</string>
	<string name="info_user">User Name..</string>

	<!-- Error Strings -->
	<string name="error_unsupported_p">Error, unsupported protocol</string>
	<string name="error_no_internet">Not Connected To Internet</string>

	<!-- Dialog Strings -->
	<string name="dialog_cancel">Cancel</string>
	<string name="dialog_ok">Do It Now!</string>
	<string name="ok">OK</string>
	<string name="confirm">Are you sure ?</string>

	<!-- Content Description Strings -->
	<string name="content_description_padder">Pontent Padder</string>
	<string name="content_description_custom_alert_dialog_image">Custom Alert Dialog Image</string>
	<string name="content_description_custom_dialog_image">Custom Dialog Image</string>
	<string name="content_description_launcher_image">launcher Image</string>
	<string name="content_description_theme_image">Theme Image</string>
	<string name="content_description_wip">Work in progress image</string>
	<string name="content_description_adb_status">ADB Status Image</string>

	<!-- Test Strings -->
	<string name="wip">This App is a major Work-In-Progress, This TAB will have Features added VERY soon ..</string>
	<string name="dummy">Dummy String</string>

</resources>