<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scroller"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true"
	android:scrollbarAlwaysDrawVerticalTrack="false"
	android:scrollbars="none" >

	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:background="@drawable/shape"
		android:padding="0dp" >

		<TextView
			android:id="@+id/custom_about_dialog_textview_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="5dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:gravity="center"
			android:textColor="@color/White"
			android:textSize="18sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textView_spacer1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/custom_about_dialog_textview_title"
			android:layout_centerHorizontal="true"
			android:text="@string/padder"
			android:textSize="15sp" />

		<TextView
			android:id="@+id/textView_device_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textView_spacer1"
			android:layout_centerHorizontal="true"
			android:text="@string/device_title"
			android:textSize="15sp" />

		<GridLayout
			android:id="@+id/custom_about_dialog_gridlayout_1"
			android:layout_width="280dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textView_device_header"
			android:layout_centerHorizontal="true"
			android:columnCount="3"
			android:paddingBottom="10dp" >

			<TextView
				android:id="@+id/textView_device_row1"
				android:layout_column="1"
				android:layout_gravity="left|bottom"
				android:layout_row="0"
				android:text="@string/info_model" />

			<TextView
				android:id="@+id/textView_device_row2"
				android:layout_column="2"
				android:layout_gravity="left|bottom"
				android:layout_row="0"
				android:text="@string/dummy" />

			<TextView
				android:id="@+id/textView_device_row3"
				android:layout_column="1"
				android:layout_gravity="left"
				android:layout_row="1"
				android:text="@string/info_device" />

			<TextView
				android:id="@+id/textView_device_row4"
				android:layout_column="2"
				android:layout_gravity="left"
				android:layout_row="1"
				android:text="@string/dummy" />

			<TextView
				android:id="@+id/textView_device_row5"
				android:layout_column="1"
				android:layout_gravity="left"
				android:layout_row="2"
				android:text="@string/info_product" />

			<TextView
				android:id="@+id/textView_device_row6"
				android:layout_column="2"
				android:layout_gravity="left"
				android:layout_row="2"
				android:text="@string/dummy" />

			<TextView
				android:id="@+id/textView_device_row7"
				android:layout_column="1"
				android:layout_gravity="left"
				android:layout_row="3"
				android:text="@string/info_board" />

			<TextView
				android:id="@+id/textView_device_row8"
				android:layout_column="2"
				android:layout_gravity="left"
				android:layout_row="3"
				android:text="@string/dummy" />

			<Space
				android:layout_width="1dp"
				android:layout_height="21dp"
				android:layout_column="0"
				android:layout_row="0" />

			<Space
				android:layout_width="38dp"
				android:layout_height="1dp"
				android:layout_column="0"
				android:layout_row="0" />

			<Space
				android:layout_width="140dp"
				android:layout_height="1dp"
				android:layout_column="1"
				android:layout_row="0" />
		</GridLayout>

		<TextView
			android:id="@+id/textView_spacer2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/custom_about_dialog_gridlayout_1"
			android:layout_centerHorizontal="true"
			android:text="@string/padder"
			android:textSize="15sp" />

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textView_spacer2"
			android:layout_centerHorizontal="true"
			android:text="@string/os_title"
			android:textSize="15sp" />

		<GridLayout
			android:id="@+id/custom_about_dialog_gridlayout_2"
			android:layout_width="280dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textView2"
			android:layout_centerHorizontal="true"
			android:paddingBottom="5dp" >

			<TextView
				android:id="@+id/textView_os_row1"
				android:layout_column="1"
				android:layout_columnSpan="2"
				android:layout_gravity="left|bottom"
				android:layout_row="0"
				android:text="@string/info_version" />

			<TextView
				android:id="@+id/textView_os_row2"
				android:layout_width="wrap_content"
				android:layout_column="3"
				android:layout_columnSpan="2"
				android:layout_gravity="left|bottom"
				android:layout_row="0"
				android:text="@string/dummy" />

			<TextView
				android:id="@+id/textView_os_row3"
				android:layout_column="1"
				android:layout_gravity="left"
				android:layout_row="1"
				android:text="@string/info_build" />

			<TextView
				android:id="@+id/textView_os_row4"
				android:layout_column="3"
				android:layout_columnSpan="2"
				android:layout_gravity="left"
				android:layout_row="1"
				android:text="@string/dummy" />

			<TextView
				android:id="@+id/textView_os_row5"
				android:layout_height="wrap_content"
				android:layout_column="1"
				android:layout_columnSpan="2"
				android:layout_gravity="left"
				android:layout_row="2"
				android:text="@string/info_build_id" />

			<TextView
				android:id="@+id/textView_os_row6"
				android:layout_column="3"
				android:layout_columnSpan="2"
				android:layout_gravity="left|bottom"
				android:layout_row="2"
				android:text="@string/dummy" />

			<TextView
				android:id="@+id/textView_os_row7"
				android:layout_column="1"
				android:layout_gravity="left"
				android:layout_row="3"
				android:text="@string/info_user" />

			<TextView
				android:id="@+id/textView_os_row8"
				android:layout_column="3"
				android:layout_columnSpan="2"
				android:layout_gravity="left|bottom"
				android:layout_row="3"
				android:text="@string/dummy" />

			<Space
				android:layout_width="36dp"
				android:layout_height="1dp"
				android:layout_column="0"
				android:layout_row="0" />

			<Space
				android:layout_width="36dp"
				android:layout_height="1dp"
				android:layout_column="1"
				android:layout_row="0" />

			<Space
				android:layout_width="62dp"
				android:layout_height="1dp"
				android:layout_column="2"
				android:layout_row="0" />

			<Space
				android:layout_width="42dp"
				android:layout_height="1dp"
				android:layout_column="3"
				android:layout_row="0" />

			<Space
				android:layout_width="59dp"
				android:layout_height="1dp"
				android:layout_column="4"
				android:layout_row="0" />

			<Space
				android:layout_width="1dp"
				android:layout_height="21dp"
				android:layout_column="0"
				android:layout_row="0" />
		</GridLayout>

		<Button
			android:id="@+id/custom_about_dialog_ok"
			android:layout_width="53dp"
			android:layout_height="45dp"
			android:layout_below="@+id/custom_about_dialog_gridlayout_2"
			android:layout_centerHorizontal="true"
			android:text="@string/ok"
			android:textColor="@color/White"
			android:textSize="10sp" />
	</RelativeLayout>

</ScrollView>

