<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuitem_quit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_quit">
    </item>

    <group
        android:id="@+id/group1"
        android:enabled="true"
        android:menuCategory="system"
        android:orderInCategory="2"
        android:visible="true" >
        <item
            android:id="@+id/menuitem_version"
            android:orderInCategory="3"
            android:showAsAction="collapseActionView"
            android:title="@string/menu_version">
        </item>
        <item
            android:id="@+id/menuitem_device_info"
            android:orderInCategory="4"
            android:showAsAction="collapseActionView"
            android:title="@string/menu_device_info">
        </item>
    </group>

</menu>