<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scroller"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true"
	android:scrollbarAlwaysDrawVerticalTrack="false"
	android:scrollbars="none" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:scrollbarAlwaysDrawVerticalTrack="false"
		android:scrollbars="none" >

		<TextView
			android:id="@+id/padder1_tab1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center" />

		<TableLayout
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center" >

			<TextView
				android:id="@+id/TextView03"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/power_functions"
				android:textColor="@color/CadetBlue"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/TextView06"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />

			<TableRow
				android:id="@+id/tableRow1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal" >

				<Button
					android:id="@+id/button_reboot"
					android:layout_width="wrap_content"
					android:layout_height="45dp"
					android:background="@drawable/button_normal"
					android:gravity="center"
					android:onClick="myClickHandler"
					android:paddingBottom="10dp"
					android:text="@string/reboot"
					android:textColor="@color/White"
					android:textSize="15sp"
					android:textStyle="bold" />

				<ImageView
					android:id="@+id/imageView1"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:contentDescription="@string/reboot"
					android:paddingBottom="12dp"
					android:src="@drawable/reboot" />
			</TableRow>

			<TableRow
				android:id="@+id/tableRow2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal" >

				<Button
					android:id="@+id/button_reboot_recovery"
					android:layout_width="wrap_content"
					android:layout_height="45dp"
					android:background="@drawable/button_normal"
					android:gravity="center"
					android:onClick="myClickHandler"
					android:paddingBottom="10dp"
					android:text="@string/reboot_recovery"
					android:textColor="@color/White"
					android:textSize="15sp"
					android:textStyle="bold" />

				<ImageView
					android:id="@+id/imageView2"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:contentDescription="@string/reboot_recovery"
					android:paddingBottom="10dp"
					android:paddingLeft="4dp"
					android:src="@drawable/reboot_recovery" />
			</TableRow>

			<TableRow
				android:id="@+id/tableRow3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal" >

				<Button
					android:id="@+id/button_power_off"
					android:layout_width="wrap_content"
					android:layout_height="45dp"
					android:background="@drawable/button_normal"
					android:gravity="center"
					android:onClick="myClickHandler"
					android:paddingBottom="10dp"
					android:text="@string/power_off"
					android:textColor="@color/White"
					android:textSize="15sp"
					android:textStyle="bold" />

				<ImageView
					android:id="@+id/imageView3"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:contentDescription="@string/power_off"
					android:paddingBottom="10dp"
					android:src="@drawable/power_off" />
			</TableRow>

			<TextView
				android:id="@+id/TextView01"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />

			<TextView
				android:id="@+id/TextView05"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/adb_functions"
				android:textColor="@color/CadetBlue"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/TextView02"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />

			<TableRow
				android:id="@+id/tableRow4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" >

				<Button
					android:id="@+id/button_wireless_adb_enable"
					android:layout_width="wrap_content"
					android:layout_height="45dp"
					android:background="@drawable/button_normal"
					android:gravity="center"
					android:onClick="myClickHandler"
					android:paddingBottom="10dp"
					android:text="@string/wireless_adb_enable"
					android:textColor="@color/White"
					android:textSize="15sp"
					android:textStyle="bold" />

				<ImageView
					android:id="@+id/imageView_adb_enable"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:contentDescription="@string/wireless_adb_enable"
					android:paddingBottom="10dp"
					android:src="@drawable/adb_enable" />
			</TableRow>

			<TableRow
				android:id="@+id/tableRow7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/textView_ip"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:gravity="center|center_horizontal"
					android:text="@string/wireless_adb_enabled_ip" />

				<ImageView
					android:id="@+id/imageView_adb_status"
					android:layout_width="45dp"
					android:layout_height="45dp"
					android:contentDescription="@string/content_description_adb_status"
					android:gravity="center"
					android:paddingBottom="10dp" />
			</TableRow>

			<TableRow
				android:id="@+id/tableRow5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" >

				<Button
					android:id="@+id/button_wireless_adb_disable"
					android:layout_width="wrap_content"
					android:layout_height="45dp"
					android:background="@drawable/button_normal"
					android:gravity="center"
					android:onClick="myClickHandler"
					android:paddingBottom="10dp"
					android:text="@string/wireless_adb_disable"
					android:textColor="@color/White"
					android:textSize="15sp"
					android:textStyle="bold" />

				<ImageView
					android:id="@+id/imageView_adb_disable"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:contentDescription="@string/wireless_adb_disable"
					android:paddingBottom="10dp"
					android:src="@drawable/adb_disable" />
			</TableRow>
		</TableLayout>
	</LinearLayout>

</ScrollView>