<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scroller"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true"
	android:scrollbarAlwaysDrawVerticalTrack="false"
	android:scrollbars="none" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:scrollbarAlwaysDrawVerticalTrack="false"
		android:scrollbars="none" >

		<TextView
			android:id="@+id/TextView02"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

		<TextView
			android:id="@+id/TextView01"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/tweaks"
			android:textColor="@color/CadetBlue"
			android:textSize="14sp" />

		<TextView
			android:id="@+id/padder1_tab1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="" />

		<ImageView
			android:id="@+id/imageView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/content_description_wip"
			android:src="@drawable/wip" />

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/wip"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/CadetBlue"
			android:textSize="14sp" />
	</LinearLayout>

</ScrollView>