<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="none" >

        <TextView
            android:id="@+id/padder1_tab1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/mainpage_header"
            android:textColor="@color/DarkRed" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TableRow
                android:id="@+id/TableRow01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button_mainpage_link_backup_restore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_normal"
                    android:onClick="myClickHandler"
                    android:paddingBottom="10dp"
                    android:text="@string/mainpage_link_backup_restore"
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainpage_text_backup_restore"
                    android:textColor="@color/CadetBlue" />
            </TableRow>

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <Button
                    android:id="@+id/button_mainpage_link_addons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_normal"
                    android:onClick="myClickHandler"
                    android:paddingBottom="10dp"
                    android:text="@string/mainpage_link_addons"
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainpage_text_addons"
                    android:textColor="@color/CadetBlue" />
            </TableRow>

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button_mainpage_link_tweaks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_normal"
                    android:onClick="myClickHandler"
                    android:paddingBottom="10dp"
                    android:text="@string/mainpage_link_tweaks"
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow04"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainpage_text_tweaks"
                    android:textColor="@color/CadetBlue" />
            </TableRow>

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button_mainpage_link_recovery"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_normal"
                    android:onClick="myClickHandler"
                    android:paddingBottom="10dp"
                    android:text="@string/mainpage_link_recovery"
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainpage_text_recovery"
                    android:textColor="@color/CadetBlue" />
            </TableRow>

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button_mainpage_link_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_normal"
                    android:onClick="myClickHandler"
                    android:paddingBottom="10dp"
                    android:text="@string/mainpage_link_Online"
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow05"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainpage_text_online"
                    android:textColor="@color/CadetBlue" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>